--- a/bundles/org.eclipse.platform.doc.isv/guide/ant_contributing_task.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant_contributing_task.htm
@@ -14,7 +14,7 @@ Contributing tasks and types
 <h2>
 Contributing tasks and types</h2>
 <p>When your plug-in contributes Ant tasks and types, the tasks and types have access to all
-if the classes inside the contributing plug-in. For example, the <b>eclipse.refreshLocal</b> task 
+of the classes inside the contributing plug-in. For example, the <b>eclipse.refreshLocal</b> task 
 contributed by <b>org.eclipse.core.resources</b> plug-in is 
 a wrapper for the
 <a href="../reference/api/org/eclipse/core/resources/IResource.html#refreshLocal(int, org.eclipse.core.runtime.IProgressMonitor)">
