--- a/bundles/org.eclipse.platform.doc.user/concepts/chelpsys.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/chelpsys.htm
@@ -30,7 +30,7 @@ button <img border="0" src="../images/bookshelf.gif" alt="Table of contents butt
 
 <h2>Search</h2>
 <p>If you want to find a particular piece of information in the online help, use
-Search. The help system will search the current information set, or only a part
+Search. The help system will search the entire information set, or only a part
 of it, to find topics that meet the criteria you specify.</p>
 
 <h2>Context-sensitive help</h2>
