--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27b.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27b.htm
@@ -11,23 +11,23 @@
 <BODY BGCOLOR="#ffffff">
 <H1>Branches</H1>
 
-<p>In CVS, teams share and integrate their ongoing work in <i>branches</i>.&nbsp;Think 
-  of a banch as a shared work area that can be updated at any time by team members.&nbsp; 
+<p>In CVS, teams share and integrate their ongoing work in <i>branches</i>. Think 
+  of a banch as a shared work area that can be updated at any time by team members. 
   In this way, individuals can work on a team project, share their work with others 
-  on the team, and access the work of others during all stages of the project.&nbsp; 
-  The branch effectively represents the current shared state of the project.&nbsp;&nbsp; 
+  on the team, and access the work of others during all stages of the project. 
+  The branch effectively represents the current shared state of the project. 
 </p>
-<p>Resources can be changed in the workbench without affecting the branch.&nbsp; 
-  Individuals must explicitly provide their changed resources to the branch.&nbsp;&nbsp; 
+<p>Resources can be changed in the workbench without affecting the branch. 
+  Individuals must explicitly provide their changed resources to the branch.
 </p>
-<p>Every CVS repository has at least one branch, refered to as HEAD.&nbsp; Under 
-  certain conditions, more than one branch may exist in a repository.&nbsp; For 
+<p>Every CVS repository has at least one branch, referred to as HEAD. Under 
+  certain conditions, more than one branch may exist in a repository. For 
   example, one branch may be for ongoing work, and another branch may be for maintenance 
   work.&nbsp; </p>
 <p>As you make changes locally in your workbench, you are working isolated from 
   the rest of the team. When you are ready to make your local resource changes 
-  available to other team members, you'll need to <i> commit</i> your work to 
-  the branch. All such changes are termed as outgoing changes when you do a synchronization. 
+  available to other team members, you'll need to <i>commit</i> your work to 
+  the branch. All such changes are classified as outgoing changes when you do a synchronization. 
 </p>
   
 <p>Ideally, you should update your local workspace with any changes others have 
