--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27v.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27v.htm
@@ -22,7 +22,7 @@
 <p CLASS="Para"><img align="texttop" border="0" src="../images/Image242_repo_view.jpg" alt="Picture of the Repositories view, which is a tree view showing 1 repository and the groups of project versions and streams that are under it." ></p>
 <p CLASS="Para">Like other views in the workbench, the CVS Repositories view has 
   its own toolbar. Toolbar buttons are provided for refreshing the view and for 
-  navigating. The toolbar also contains a drop down menu that allows the user 
+  navigating. The toolbar also contains a drop down menu that allows you 
   to toggle the view to show the folders contained in the repository or modules 
   defined in the CVSROOT/modules</p>
 
