--- a/bundles/org.eclipse.platform.doc.user/tasks/tkeybindings.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tkeybindings.htm
@@ -2,29 +2,29 @@
 <HEAD>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Changing the key bindings</title>
-
 </HEAD>
+
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Changing the key bindings</H1>
-<P CLASS="Para">
+<H1>Changing the key bindings</H1>
+
+<p>
 You can choose between different key bindings.
-</P>
+</p>
 
 <ol>
   <li>
     <p CLASS="Para">
-    Select <b>Window->Preferences->Workbench->Editors</b>.
+    Select <b>Window &gt; Preferences &gt; Workbench &gt; Editors</b>.
     </li>
   <li>
     <p CLASS="Para">Select from one of the key bindings in the <b>Key bindings</b> list box.
     </li>
 </ol>
-<p CLASS="Para"><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/accessibility/keyboardshortcuts.htm">Keyboard shortcuts</a><br>
+
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/accessibility/keyboardshortcuts.htm">Keyboard shortcuts for the Workbench, Java development tools, and the Debugger</a><br>
 <a href="../concepts/accessibility/navigation.htm">Navigating the user interface by using the keyboard</a>
 </p>
 
