--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-26.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-26.htm
@@ -52,12 +52,12 @@
       <p CLASS="Para">A way to coordinate and integrate this work</li>
   </ul>
   <p CLASS="Para">Maintaining history is important so that one can compare the 
-    current work against previous, revert to older work that is better, etc.&nbsp; 
+    current work against previous, revert to older work that is better, and so on. 
     Coordinating the work is critical so that there exists one definition of the 
     current project state, containing the integrated work of the team. This coordination 
     is provided via the branch model.</p>
   <p CLASS="Para">An optimistic model is one where any member of the team can 
-    make changes to any resource he/she has access to.&nbsp; Because two team 
+    make changes to any resource he or she has access to.&nbsp; Because two team 
     members can release to the branch changes to the same resource, conflicts 
     can occur and must be dealt with. This model is termed <i>optimistic</i> because 
     it is assumed that conflicts are rare.</p>
