--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27v.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27v.htm
@@ -24,7 +24,7 @@
   its own toolbar. Toolbar buttons are provided for refreshing the view and for 
   navigating. The toolbar also contains a drop down menu that allows you 
   to toggle the view to show the folders contained in the repository or modules 
-  defined in the CVSROOT/modules</p>
+  defined in the CVSROOT/modules.</p>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
   <a href="concepts-26.htm">Team programming with CVS</a>&nbsp;<a href="concepts-27c.htm"><br>
