--- a/bundles/org.eclipse.platform.doc.user/concepts/crhview.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/crhview.htm
@@ -16,34 +16,28 @@
   or open an editor on a revision.
 <P CLASS="Para">Here is what the CVS Resource History View looks like:</P>
 <P CLASS="Para"><img align="texttop" border="0" src="../images/Image216_history_view.jpg" alt="CVS Resource History View"></P>
-<P CLASS="Para">For each resource, the following is displayed in the table.</P>
-<DIV CLASS="Topic">
-  <h2> Revision</h2>
-  <P CLASS="Para"> This column displays the revision number of the revision in 
-    the history.&nbsp; </P>
-  <h2 CLASS="Para">Tags</h2>
-  <P CLASS="Para">The tags that are associated with the revision. Selecting a 
-    revision line will list the tags in the pane in the lower left of the view.</P>
-</DIV>
-<DIV CLASS="Topic">
-  <h2> Date</h2>
-  <P CLASS="Para"> This column displays the creation date and time of the revision 
-    in the history.</P>
-</DIV>
-<DIV CLASS="Topic">
-<h2>
-Author</h2>
-<P CLASS="Para">
+<P CLASS="Para">For each resource, the following is displayed in the table:</P>
+<dl>
+  <dt> Revision</dt>
+  <dd> This column displays the revision number of the revision in 
+    the history.&nbsp; </dd>
+  <dt>Tags</dt>
+  <dd>The tags that are associated with the revision. Selecting a 
+    revision line will list the tags in the pane in the lower left of the view.<dd>
+  <dt> Date</dt>
+  <dd> This column displays the creation date and time of the revision 
+    in the history.</dd>
+<dt>
+Author</dt>
+<dd>
 This column displays the name of the person who
-created and authored the version.</P>
-</DIV>
-<DIV CLASS="Topic">
-<h2>
-Comment</h2>
-  <P CLASS="Para"> This column displays the comment (if any) supplied for this 
+created and authored the version.</dd>
+<dt>
+Comment</dt>
+  <dd> This column displays the comment (if any) supplied for this 
     revision at the time it was commited. Selecting a revision line will show 
-    the complete comment in the pane in the lower right of the view.</P>
-</DIV>
+    the complete comment in the pane in the lower right of the view.</dd>
+</dl>
 
 <P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
 <a href="concepts-12.htm"><br>
