--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
@@ -14,10 +14,10 @@
  
  <body>
 
- <h1>Keyboard shortcuts for the Workbench, Java development tools, and the 
- Debugger</h1>
+ <h1>Keyboard shortcuts for the workbench, Java development tools, and the 
+ debugger</h1>
  <p>The following tables show shortcut keys that are common across the workbench 
- and across the text and java editors supplied with Eclipse.</p>
+ and across the text and Java editors supplied with Eclipse.</p>
  
  <p>The first table shows the default key bindings. The second table shows the
  key bindings for the Emacs key bindings shipped with Eclipse. </p>
