--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
@@ -9,13 +9,13 @@
  <body>
 
  <h1>Navigating the user interface by using the keyboard</h1>
- <p>The user interface is navigable using the keyboard. The tab key is used to
- iterate through the controls in a particular scope (i.e. a dialog or a view and
+ <p>The user interface is navigable using the keyboard. The Tab key is used to
+ iterate through the controls in a particular scope (for example, a dialog or a view and
  its related icons). To navigate to the main controls for the workbench window
- or to tab out of views that use the tab (such as editors) use Ctrl+Tab. </p>
+ or to tab out of views that use the Tab key (such as editors) use Ctrl+Tab. </p>
  <h2>Menus</h2>
- <p>Most menus are assigned mnemonics for each entry which allow the user to
- select them by using the underlined letter instead of the mouse. You can also
+ <p>Most menus are assigned mnemonics for each entry which allow you to
+ select them by typing the underlined letter instead of the mouse. You can also
  select an item by moving through the menus and submenus with the arrow keys. </p>
  <p>The various menus available can be accessed using the keyboard in the
  following ways: </p>
@@ -30,9 +30,9 @@
  </ul>
  <h2>Controls</h2>
  <p>Mnemonics are assigned to most labels of controls (for 
- example, buttons, check boxes, radio buttons, and so on) in dialog boxes, 
+ example, buttons, check boxes, radio buttons) in dialog boxes, 
  preference pages, and property pages. To access the control associated
- with&nbsp; label, use the Alt key along with the letter that is underlined 
+ with a label, use the Alt key along with the letter that is underlined 
  in the label. </p>
  <h2>Navigation Context</h2>
  <p>Navigation context is saved for the packages and navigator views and for the
@@ -41,7 +41,7 @@
  selected page for the preferences and properties dialog is saved between
  invocations of the dialog but are not saved between workbench invocations. </p>
  <h2>Cycling Editors, Views and Perspectives </h2>
- <p>To switch between editors, views and perspectives Eclipse provides a cycling
+ <p>To switch between editors, views and perspectives, the workbench provides a cycling
  function that is invoked by Ctrl and a function key. All of these cycling
  functions recall the last thing selected to allow for rapid cycling back and
  forth between two items. The cycling functions are </p>
@@ -53,13 +53,13 @@
  <h2>Accelerators </h2>
  <p>Many of the actions in Eclipse have an accelerator assigned to them. For the
  full list of these accelerators see the Keyboard shortcuts reference below. </p>
-<p><img src="../../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
- <a href="accessmain.htm"><br>Accessibility Features in Eclipse</a>
- <a href="../../tasks/tkeybindings.htm"><br>Changing the key bindings</a>
- <a href="keyboardshortcuts.htm"><br>Keyboard shortcuts</a> 
+<p><img src="../../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+ <a href="accessmain.htm">Accessibility Features in Eclipse</a><br>
+ <a href="../../tasks/tkeybindings.htm">Changing the key bindings</a><br>
+ <a href="keyboardshortcuts.htm">Keyboard shortcuts</a> 
 </p>
- <p><img src="../../images/ngrelr.gif" alt="Related references" width="159" height="27">
- <a href="fontsandcolors.htm"><br>Font and color settings using the Window Preferences.</a></p>
+ <p><img src="../../images/ngrelr.gif" alt="Related references" width="159" height="27"><br>
+ <a href="fontsandcolors.htm">Font and color settings using the Window Preferences.</a></p>
 
 <p><a href="../../hglegal2002.htm"><img src="../../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a></p> 
 </body>
