Fixed typos & outdated link titles.

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27c.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27c.htm
@@ -1,52 +1,61 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>CVS Repositories</title>
-<meta name="keyword" content="team">
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">CVS Repositories</H1>
-<P CLASS="Intro">
-<P CLASS="Para"> A Concurrent Versions System (CVS) repository is a persistent 
-  data store that coordinates multi-user access to projects and their contents. 
-  Projects in a repository can be of two forms: immutable (a project version) 
-  or modifiable (a project in a branch). Communication between the repository 
-  and workbench clients is possible over local or wide area networks.&nbsp; Currently 
-  the workbench supports two internal authentication protocols for CVS; pserver 
-  and ssh. Authentication protocols provided by external tools can also be used 
-  by CVS.</P>
-<DIV CLASS="Topic">
-<P CLASS="Para">
-You can find more information on CVS at <A HREF="http://www.cvshome.org" CLASS="URL" target="_blank">http://www.cvshome.org.</A></P>
-</DIV>
-
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="concepts-26.htm">Team programming with CVS</a>
-<a href="concepts-27b.htm"><br>
-Branches</a><a href="concepts-27.htm"><br>
-Versions<br>
-</a><a href="concepts-17a.htm">Local history</a></p>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-<br><a href="../tasks/tasks-92.htm">Creating a CVS repository location</a>
-</p>
-
-
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><a href="../reference/ref-48b.htm"><br>
-</a><a href="../reference/ref-47.htm">
-CVS</a>
-<br><a href="../reference/ref-32.htm">CVS Repositories view</a>
-</p>
-
+<html>
+<head>
+ 
+  <meta http-equiv="Content-Type"
+ content="text/html; charset=ISO-8859-1">
+ 
+  <meta http-equiv="Content-Style-Type" content="text/css">
+  
+  <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1"
+ type="text/css">
+  <title>CVS Repositories</title>
+  
+  <meta name="keyword" content="team">
+</head>
+  <body bgcolor="#ffffff">
+ 
+<h1 class="Head">CVS Repositories</h1>
+ 
+<p class="Intro"> </p>
+<p class="Para"> A Concurrent Versions System (CVS) repository is a persistent
+   data store that coordinates multi-user access to projects and their contents.
+   Projects in a repository can be of two forms: immutable (a project version)
+   or modifiable (a project in a branch). Communication between the repository
+   and workbench clients is possible over local or wide area networks.&nbsp;
+Currently    the workbench supports two internal authentication protocols
+for CVS: pserver    and ssh. Authentication protocols provided by external
+tools can also be used    by CVS.</p>
+ 
+<div class="Topic"> 
+<p class="Para"> You can find more information on CVS at <a
+ href="http://www.cvshome.org" class="URL" target="_blank">http://www.cvshome.org.</a></p>
+ </div>
+   
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts"
+ width="159" height="27">
+<br>
+ <a href="concepts-26.htm">Team programming with CVS</a> <a
+ href="concepts-27b.htm"><br>
+ Branches</a><a href="concepts-27.htm"><br>
+ Versions<br>
+ </a><a href="concepts-17a.htm">Local history</a></p>
+   
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks"
+ width="159" height="27">
+ <br>
+<a href="../tasks/tasks-92.htm">Creating a CVS repository location</a> </p>
+   
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference"
+ width="159" height="27">
+<a href="../reference/ref-48b.htm"><br>
+ </a><a href="../reference/ref-47.htm"> CVS</a> <br>
+<a href="../reference/ref-32.htm">CVS Repositories view</a> </p>
+  
 <p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+ <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
+ alt="Copyright IBM Corporation and others 2000, 2002" border="0">
+</a> </p>
+  
+</body>
+</html>
