*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings.htm
@@ -55,8 +55,7 @@ Preferences dialog. </p>
 lookup order for key bindings.</p>
 <p>This is all best understood by walking through the workbench and looking at
 how actions and accelerators are declared.&nbsp; We'll look at all of this from
-the point of view of defining key bindings for existing actions.&nbsp; Then
-we'll review it all again from the user's point of view.</p>
+the point of view of defining key bindings for existing actions.&nbsp; </p>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
