--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-34.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-34.htm
@@ -23,7 +23,7 @@ access):</p>
   <li>Expand the newly created item in Feature Updates view to show the
     categories of feature versions available at that update site. This will
     contact the web site to discover what features are available.</li>
-  <li>Expand one of the top-level category and select a feature. Information
+  <li>Expand one of the top-level categories and select a feature. Information
     about that feature is appears in the Preview view.</li>
   <li>After selecting the feature to be added, click the <b>Install</b> button
     within the Preview view.</li>
