--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-34.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-34.htm
@@ -24,7 +24,7 @@ access):</p>
     categories of feature versions available at that update site. This will
     contact the web site to discover what features are available.</li>
   <li>Expand one of the top-level categories and select a feature. Information
-    about that feature is appears in the Preview view.</li>
+    about that feature appears in the Preview view.</li>
   <li>After selecting the feature to be added, click the <b>Install</b> button
     within the Preview view.</li>
   <li>The Feature Install wizard confirms the details of the feature you are
