--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/accessmain.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/accessmain.htm
@@ -40,7 +40,7 @@
    </li>
  </ul>
  <p><strong>Note: </strong>The Accessibility features mentioned in 
- this document apply to the Windows operating system.<br>
+ this document apply to the Windows operating system.
  </p>
  <p><img src="../../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="navigation.htm"><br>
  Navigating the user interface using the keyboard</a></p>
@@ -57,6 +57,6 @@
  <p>&nbsp;</p>
 
  
-<p><a href="../../hglegal2002.htm"><img src="../../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" ></a></p>
+<p><a href="../../hglegal2002.htm"><img src="../../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14" ></a></p>
 </body>
 </html>
