--- a/bundles/org.eclipse.platform.doc.user/concepts/cbookmrk.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cbookmrk.htm
@@ -19,7 +19,7 @@ you can use the Bookmarks view to return to those files quickly.</P>
 Bookmarks</b>) displays all bookmarks&nbsp; that you have created.&nbsp;</P>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="ctskview.htm">Tasks</a></p>
+<a href="ctskview.htm">Tasks view</a></p>
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
