--- a/bundles/org.eclipse.platform.doc.user/concepts/cexttools.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cexttools.htm
@@ -99,7 +99,7 @@ in an Ant build file to perform.</blockquote>
 </p>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
 <br><a href="../tasks/tasks-90.htm">Running external tools</a>
-<br><a href="../tasks/tasks-89.htm">Running Ant</a>
+<br><a href="../tasks/tasks-89.htm">Running Ant build files</a>
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm">
 <img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." BORDER=0 width="324" height="14" ></a>
