--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-17a.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-17a.htm
@@ -20,7 +20,7 @@ history is uniquely represented by the date and time the file was
 saved.&nbsp;&nbsp;</p>
 <p>Only files have local history; projects and folders do not have a local history.</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="concepts-27.htm">Resource versions</a></p>
+<a href="concepts-27.htm">Versions</a></p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="../tasks/tasks-87.htm">Replacing a resource with local history</a><a href="../tasks/tasks-70.htm"><br>
@@ -29,7 +29,7 @@ Setting local history preferences<br>
 </a><a href="../tasks/tasks-100.htm">Creating a version of a project</a></p>
 
 <p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
 </p>
 
 </BODY>
