--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-12.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-12.htm
@@ -45,7 +45,7 @@ of projects, folders, and files.&nbsp;</p>
 Workbench</a><a href="cnav.htm"><br>
 Navigator view<br>
 </a><a href="concepts-17.htm">Resource hierarchies</a><a href="concepts-22.htm"><br>
-Builders</a></p>
+Builds</a></p>
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-53.htm"><br>
@@ -61,7 +61,7 @@ Copying resources</a><a href="../tasks/tasks-63.htm"><br>
 Moving resources</a></p>
 
 <p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
 </p>
 
 </BODY>
