--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-17.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-17.htm
@@ -41,7 +41,7 @@ Sorting resources in the Navigator view</a><a href="../tasks/tasks-48b.htm"><br>
 Showing or hiding files in the Navigator view</a></p>
 
 <p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
 </p>
 
 </BODY>
