--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-18.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-18.htm
@@ -39,7 +39,7 @@ views</i>, which you can create as shortcuts to the views you use most often.</p
 your mouse pointer over the button and reading the tooltip that opens. See the
 list of related reference topics below for a table of all toolbar buttons.</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br>
-<a href="concepts-2.htm">The Workbench<br>
+<a href="concepts-2.htm">Workbench<br>
 </a><a href="concepts-5.htm">Views</a>
 <a href="concepts-2.htm"><br>
 </a><a href="concepts-4.htm">Perspectives<br>
@@ -52,7 +52,7 @@ list of related reference topics below for a table of all toolbar buttons.</p>
 <a href="../reference/ref-68.htm">Toolbar buttons</a></p>
 
 <p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
 </p>
 
 </BODY>
