--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-75.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-75.htm
@@ -16,8 +16,8 @@ The disadvantage of manual building is that tasks generated to indicate build er
 output (for example, before running your Java program).&nbsp; </P>
 <p>
 <b>Note</b>: Some of the menu items described below are only available when 
-the automatic build preference is disabled by selecting <b>Window &gt;
-Preferences</b> &gt; <b>Workbench</b>.&nbsp;</p>
+the automatic build preference is disabled in the workbench preferences (select <b>Window &gt;
+Preferences</b> &gt; <b>Workbench</b>).</p>
 <p CLASS="Para">To build only selected projects:</p>
 <ol>
   <li>In the Navigator view of the Resource perspective, select one or 
@@ -29,7 +29,7 @@ Right-click and select the option <b>Rebuild Project</b> from the pop-up menu.
 </ol>
 <p>To build all projects in the workspace:</p>
 <ul>
-  <li>Click <b>Project &gt; Rebuild Project</b> for an incremental build.</li>
+  <li>Click <b>Project &gt; Rebuild Project</b> for an incremental build (rebuilds only modified resources).</li>
   <li>Click <b>Project &gt; Rebuild All </b>for a full build.</li>
 </ul>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/concepts-22.htm"><br>
